[package]
name = "jkn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive", "env"] }
env_logger = "0.10.0"
git2 = "0.17.2"
inquire = "0.6.2"
log = "0.4.19"
serde = { version = "1.0.166", features = ["derive"] }
tempfile = "3.6.0"
termimad = "0.23.1"
toml = "0.7.6"

[dev-dependencies]
ctor = "0.2.4"
