[package]
name = "jkn"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive", "env"] }
crossterm = { version = "0.26.1", features = ["bracketed-paste", "serde"] }
env_logger = "0.10.0"
git2 = "0.17.2"
inquire = "0.6.2"
log = "0.4.19"
serde = { version = "1.0.166", features = ["derive"] }
tempfile = "3.6.0"
termimad = "0.23.1"
toml = "0.7.6"
tui = { version = "0.19.0", features = ["crossterm", "serde"] }

[dev-dependencies]
ctor = "0.2.4"
