[package]
name = "jkn"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive", "env"] }
crossterm = { version = "0.26.1", features = ["bracketed-paste", "serde"] }
env_logger = "0.10.0"
git2 = "0.17.2"
inquire = "0.6.2"
log = "0.4.19"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.166", features = ["derive"] }
tempfile = "3.6.0"
termimad = "0.23.1"
time = { version = "0.3.23", features = ["macros", "formatting"] }
toml = "0.7.6"
tqdm = "0.5.0"
tui = { version = "0.19.0", features = ["crossterm", "serde"] }

[dev-dependencies]
ctor = "0.2.4"
